button color created html1 comment out and in stylesheet link in html

--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -4,21 +4,21 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    color: white;
+    color: rgb(20, 9, 9);
     /* text-shadow: 10px 10px 5px lightgrey; */
 }
 h1{
     font-size: 60px;
     font-weight: bold;
     font-family: 'Cinzel', serif;
-text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
+/* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
 }
 span {
 
     font-size: 40px;
     font-family: 'Grenze', serif;
     font-weight: bold;
-    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
+    /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
 }
 header{
     display: flex;    
@@ -50,11 +50,57 @@ ul{
     background:#003333; 
     font-family: 'Grenze', serif;
    
-    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
+    /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
 
-   /* border-style: solid;
-    border-color: #806000;*/
+   
 }
 
+.Question_Container{
+  border-style: outset;
+  border-color: #806000;
+  width: auto;
+  height: 800px;
+  text-align: center;
+  border-width: 20px; 
+
+}
+
+ .Question_Choices{
+    padding-top: 2em;
+    display: flex;
+    flex-direction: row;    
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+} 
 
 
+.Question_Head{
+    padding: 2em 2em;
+}
+
+.option {
+    height: 200px;
+    width: 300px;
+    font-size: 24px; 
+    background-color: black;
+    margin: 20px; 
+    font-weight: bold;
+
+}
+
+.option p {
+    color:#cc9900;
+}
+
+.option:hover {
+    background-color: rgba(182, 8, 168, 0.384);    
+} 
+ .option p:hover {
+     color: black;
+ }
+   
+h2 {
+    font-size: 36px;
+}
+ 
