fixed nav bar to top

--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -7,6 +7,14 @@
     color: white;
     /* text-shadow: 10px 10px 5px lightgrey; */
 }
+
+nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
 h1 {
     font-size: 60px;
     font-weight: bold;
