--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -47,14 +47,7 @@ body {
     color: #fff;
     padding: 2em;
 }
-#quiz_body {
-    
-    border-style: outset;
-    border-color: #2b1661;
-    border-width: 20px; 
-    width: auto;
-    height: 800px;
-}
+
 #about, #quiz {
     width: auto;
     height: 400px;
@@ -75,54 +68,6 @@ ul {
     font-family: 'Grenze', serif;
 }
 
-.Question_Container {
-  text-align: center;
-  font-size: 36px;
-  font-family: 'Cinzel', serif;
-  font-weight: bold;
-}
-
-.Question_Choices {
-    padding-top: 2em;
-    display: flex;
-    flex-direction: row;    
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: stretch;
-    font-size: 20px;
-} 
-
-
-.Question_Head {
-    padding: 2em 2em;
-    font-size: 36px;
-    font-family: 'Cinzel', serif;
-    font-weight: bold;
-}
-
-.diffOption,
-.submit-button {
-    height: 100px;
-    width: 150px;
-    font-size: 24px; 
-    background-color: black;
-    margin: 20px; 
-    font-weight: bold;
-
-}
-
-.diffOption p, .submit-button p {
-    color: white;
-    font-size: 20px;
-}
-
-.diffOption:hover, .submit-button:hover {
-    background-color: darkgray;    
-} 
-.diffOption p:hover, .submit-button p:hover {
-    color: black;
-    transition: all 1.5s ease;
-} 
 
 .quiz {
     color: white;
@@ -142,150 +87,149 @@ ul {
     transition: all 1.5s ease;
 }
  
+/* //////////////////////////////////Style for collapsible */
 
 
-
-   *{
+*{
     line-height: 1.6em;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  } 
+} 
 
- h1 {
-    font-size: 50px;
-    font-weight: bolder;
-    font-family: 'Cinzel', serif;
-    color: #3C3D37;
-    /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
- }
- h2,h3 {
-    font-size: 30px;
-    font-weight: bold;
- }
- span {
-    font-size: 40px;
-    font-family: 'Grenze', serif;
-    font-weight: bold;
-    /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
- }
- header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 80px;
- }
- body {
-    padding: 2em;
-    /* background-color: -webkit-linear-gradient(#C8A935 0%, #D7CB6E 100%); */
- }
- #quiz_body {
-    background-color: black;
-    border-width: 20px;
-    width: auto;
-    height: 800px;
- }
- #about, #quiz {
-    width: auto;
-    height: 400px;
- }
- ul {
-    padding-top:10px;
-    padding-bottom: 30px;
-    font-size: 25px;
-    justify-content: space-around;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    flex-flow: row;
-    align-items: stretch;
-    background:#003333;
-    font-family: 'Grenze', serif;
- }
- .Question_Head {
-    background-color: black;
-    color: #3C3D37;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    font-size: 15px;
-    overflow: hidden;
-    outline: none;
-    font-family: 'Cinzel', serif;
-    justify-content: center;
-    display: flex;
-    border: 10px;
-    /* border-color: white; */
- }
- .Question_Choices {
-    padding: 0 10px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-    background-color: black;
-    outline: none;
-    justify-content: center;
- }
- .diffOption{
-    font-family: 'Cinzel', serif;
-    margin: 20px;
-    cursor: pointer;
-    position: relative;
-    font-size: 20px;
-    z-index: 0;
-    cursor: pointer;
-    padding: 15px 20px;
-    border-width: 10px;
-    border-radius: 50%;
-    background: transparent;
-    color: black;
-    border-color: transparent;
- }
- .diffOption:hover{
-    color: black;
-    opacity: 0.75;
-    outline: none;
-  }
-  .diffOption:focus{
-    opacity: 0.75;
-    color: black;
-    outline: none;
-  }
-  .diffOption:before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-  /*   background-image: linear-gradient(73deg,           transparent 0%, orange 100%); */
-    content: '';
-    border-radius: 2%;
-    transform: skewX(-30deg);
-    background-image: linear-gradient(#B8831E,  #C8A935, #B8831E,  #D7CB6E );
-  }
- .quiz {
-    color: white;
-    background-color: black;
-    width: 100px;
-    height: 50px;
-    font-weight: bold;
- }
- .quiz p:hover {
-    color: black;
-    transition: all 1.5s ease;
- }
- .quiz:hover {
-    background-color: darkgray;
-    transition: all 1.5s ease;
- }
- 
- 
- 
- 
- 
- 
- 
- 
+h1 {
+font-size: 50px;
+font-weight: bolder;
+font-family: 'Cinzel', serif;
+color: #3C3D37;
+/* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
+}
+h2,h3 {
+font-size: 30px;
+font-weight: bold;
+}
+span {
+font-size: 40px;
+font-family: 'Grenze', serif;
+font-weight: bold;
+/* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
+}
+header {
+display: flex;
+flex-direction: column;
+align-items: center;
+padding-top: 80px;
+}
+body {
+padding: 2em;
+/* background-color: -webkit-linear-gradient(#C8A935 0%, #D7CB6E 100%); */
+}
+#quiz_body {
+background-color: black;
+border-width: 20px;
+width: auto;
+height: 800px;
+}
+#about, #quiz {
+width: auto;
+height: 400px;
+}
+ul {
+padding-top:10px;
+padding-bottom: 30px;
+font-size: 25px;
+justify-content: space-around;
+top: 0;
+left: 0;
+width: 100%;
+display: flex;
+flex-flow: row;
+align-items: stretch;
+background:#003333;
+font-family: 'Grenze', serif;
+}
+.Question_Head {
+background-color: black;
+color: #3C3D37;
+cursor: pointer;
+padding: 18px;
+width: 100%;
+text-align: left;
+font-size: 15px;
+overflow: hidden;
+outline: none;
+font-family: 'Cinzel', serif;
+justify-content: center;
+display: flex;
+border: 10px;
+/* border-color: white; */
+}
+.Question_Choices {
+padding: 0 10px;
+max-height: 0;
+overflow: hidden;
+transition: max-height 0.2s ease-out;
+background-color: black;
+outline: none;
+justify-content: center;
+}
+.diffOption{
+font-family: 'Cinzel', serif;
+margin: 20px;
+cursor: pointer;
+position: relative;
+font-size: 20px;
+z-index: 0;
+cursor: pointer;
+padding: 15px 20px;
+border-width: 10px;
+border-radius: 50%;
+background: transparent;
+color: black;
+border-color: transparent;
+}
+.diffOption:hover{
+color: black;
+opacity: 0.75;
+outline: none;
+}
+.diffOption:focus{
+opacity: 0.75;
+color: black;
+outline: none;
+}
+.diffOption:before {
+position: absolute;
+top: 0;
+left: 0;
+z-index: -1;
+width: 100%;
+height: 100%;
+/*   background-image: linear-gradient(73deg,           transparent 0%, orange 100%); */
+content: '';
+border-radius: 2%;
+transform: skewX(-30deg);
+background-image: linear-gradient(#B8831E,  #C8A935, #B8831E,  #D7CB6E );
+}
+.quiz {
+color: white;
+background-color: black;
+width: 100px;
+height: 50px;
+font-weight: bold;
+}
+.quiz p:hover {
+color: black;
+transition: all 1.5s ease;
+}
+.quiz:hover {
+background-color: darkgray;
+transition: all 1.5s ease;
+}
+
+
+
+
+
+
+
