--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -93,7 +93,11 @@ ul {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-} 
+    } 
+
+img{
+    width: 200px;
+}
 
 h1 {
 font-size: 50px;
