--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -1,11 +1,9 @@
-/* * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+*{
     line-height: 1.6em;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    color: white;
-    /* text-shadow: 10px 10px 5px lightgrey; */
+    } 
 nav{
     position: fixed;
     top: 0;
@@ -40,6 +38,8 @@ header {
 }
 body {
     background-image:url("./Images/bg.jpg");
+    background-color: black;
+    background-blend-mode: screen;
     background-attachment: fixed;
     background-size: 100%;
     color: #fff;
@@ -62,48 +62,20 @@ ul {
     display: flex;
     flex-flow: row;
     align-items: stretch;
-    background:#003333; 
+    background:lightslategray; 
     font-family: 'Grenze', serif;
-}
-
-
-.quiz {
-    color: white;
-    background-color: black;
-    width: 100px;
-    height: 50px;
-    font-weight: bold;
-
-}
-.quiz p:hover {
-    color: black;
-    transition: all 1.5s ease;
-}
-
-.quiz:hover {
-    background-color: darkgray;    
-    transition: all 1.5s ease;
-}
- 
+} 
 /* //////////////////////////////////Style for collapsible */
 
-
-*{
-    line-height: 1.6em;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    } 
-
 img{
-    width: 200px;
+    width: 400px;
 }
 
 h1 {
 font-size: 50px;
 font-weight: bolder;
 font-family: 'Cinzel', serif;
-color: #3C3D37;
+color: white;
 /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
 }
 h2,h3 {
@@ -147,9 +119,16 @@ width: 100%;
 display: flex;
 flex-flow: row;
 align-items: stretch;
-background:#003333;
+background:lightslategray;
 font-family: 'Grenze', serif;
+list-style: none;
 }
+ul li:hover {
+    background-color: #222;
+    color: lightslategray;
+    cursor: pointer;
+}
+
 .Question_Head {
 background-color: black;
 color: #3C3D37;
@@ -175,7 +154,7 @@ background-color: black;
 outline: none;
 justify-content: center;
 }
-.diffOption{
+.quiz-button{
 font-family: 'Cinzel', serif;
 margin: 20px;
 cursor: pointer;
@@ -190,17 +169,17 @@ background: transparent;
 color: black;
 border-color: transparent;
 }
-.diffOption:hover{
-color: black;
+.quiz-button:hover{
+color: lightgray;
 opacity: 0.75;
 outline: none;
 }
-.diffOption:focus{
+.quiz-button:focus{
 opacity: 0.75;
-color: black;
+color: lightgray;
 outline: none;
 }
-.diffOption:before {
+.quiz-button:before {
 position: absolute;
 top: 0;
 left: 0;
@@ -209,7 +188,7 @@ width: 100%;
 height: 100%;
 /*   background-image: linear-gradient(73deg,           transparent 0%, orange 100%); */
 content: '';
-border-radius: 2%;
+border-radius: 6px;
 transform: skewX(-30deg);
 background-image: linear-gradient(#B8831E,  #C8A935, #B8831E,  #D7CB6E );
 }
@@ -228,7 +207,69 @@ transition: all 1.5s ease;
 background-color: darkgray;
 transition: all 1.5s ease;
 }
+#submit {
+    text-align: center;
+}
+.submit-button {
+    display: inline-block;
+    font-family: 'Cinzel', serif;
+    margin: 0, auto;
+    cursor: pointer;
+    position: relative;
+    font-size: 20px;
+    z-index: 0;
+    cursor: pointer;
+    padding: 15px 20px;
+    border-width: 10px;
+    border-radius: 50%;
+    background: transparent;
+    color: black;
+    border-color: transparent;
 
+}
+.submit-button:hover{
+    color: lightgray;
+    opacity: 0.75;
+    outline: none;
+    }
+.submit-button:focus{
+    opacity: 0.75;
+    color: lightgray;
+    outline: none;
+    }
+.submit-button:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    /*   background-image: linear-gradient(73deg,           transparent 0%, orange 100%); */
+    content: '';
+    border-radius: 6px;
+    transform: skewX(-30deg);
+    background-image: linear-gradient(#B8831E,  #C8A935, #B8831E,  #D7CB6E );
+    }
+
+.games {
+    display: flex;    
+    flex-direction: column; 
+    align-items: center;
+    padding: 30px;
+    }
+.select h2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}   
+.pick {
+    text-decoration: underline;
+} 
+.name {
+    text-decoration: none;
+   color: white;
+   font-weight: bold;
+}
 
 
 
