--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -3,14 +3,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    } 
-nav{
+} 
+nav ul{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    background-color:black; 
-
 }
 
 h1 {
@@ -19,9 +17,9 @@ h1 {
     font-family: 'Cinzel', serif;
     /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
 }
+
 #HS{
-    background-color: rgb(0, 0, 0); 
-    
+    background-color: rgb(0, 0, 0);     
 }
 
 h2,h3 {
@@ -29,21 +27,24 @@ h2,h3 {
     font-weight: bold;
     font-family: 'Cinzel', serif;
 }
-span {
 
+span {
+    
     font-size: 40px;
     font-family: 'Grenze', serif;
     font-weight: bold;
     /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
 }
+
 header {
     display: flex;    
     flex-direction: column; 
     align-items: center;
     padding-top: 80px;
 }
+
 body {
-     
+    
     background: url("./Images/BackG-76.png");
     background-color: black;
     background-blend-mode: screen;
@@ -53,31 +54,30 @@ body {
     padding: 2em;
 }
 
-
-
 #about, #quiz {
     width: auto;
     height: 400px;
 }
-ul {
+nav ul {
     padding-top:10px;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
     font-size: 25px;
     justify-content: space-around;
-    color:black;
+    /* background-image:(#92dcbe #4c7062);  */
+    background: linear-gradient(to bottom, #5be4ad, #1f312aa1 100%);         
     top: 0;
     left: 0;
     width: 100%;
     display: flex;
     flex-flow: row;
-    align-items: stretch;
-    background-color:#268C7E; 
-    font-family: 'Grenze', serif;
+    align-items: stretch;   
+    font-family: 'Alegreya SC', serif;
     list-style: none;
-
-} 
+}  
 /* //////////////////////////////////Style for collapsible */
-
+nav ul li{
+    font-variant: small-caps;
+}
 img{
     width: 300px;
 }
@@ -92,6 +92,7 @@ img{
 .char-single-result img{
     width:300px;
 }
+
 .char-other-result{
     padding-top: 3em;
     display: grid;
@@ -103,47 +104,48 @@ img{
     width:150px;
 }
 
-#otherPick{
-    
-    
+h1 {
+    font-size: 50px;
+    font-weight: bolder;
+    font-family: 'Cinzel', serif;
+    color: white;
+/* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
 }
 
-h1 {
-font-size: 50px;
-font-weight: bolder;
-font-family: 'Cinzel', serif;
-color: white;
-/* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
-}
 h2,h3 {
-font-size: 30px;
-font-weight: bold;
+    font-size: 30px;
+    font-weight: bold;
 }
+
 span {
-font-size: 40px;
-font-family: 'Grenze', serif;
-font-weight: bold;
+    font-size: 40px;
+    font-family: 'Grenze', serif;
+    font-weight: bold;
 /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
 }
+
 header {
-display: flex;
-flex-direction: column;
-align-items: center;
-padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 80px;
 }
+
 body {
-padding: 2em;
+    padding: 2em;
 /* background-color: -webkit-linear-gradient(#C8A935 0%, #D7CB6E 100%); */
 }
+
 #quiz_body {
-background-color: black;
-border-width: 20px;
-width: auto;
-height: 800px;
+    background-color: black;
+    border-width: 20px;
+    width: auto;
+    height: 800px;
 }
+
 #about, #quiz {
-width: auto;
-height: 400px;
+    width: auto;
+    height: 400px;
 }
 
 ul li:hover {
@@ -153,83 +155,92 @@ ul li:hover {
 }
 
 .Question_Head {
-background-color: black;
-color: #3C3D37;
-cursor: pointer;
-padding: 18px;
-width: 100%;
-text-align: left;
-font-size: 15px;
-overflow: hidden;
-outline: none;
-font-family: 'Cinzel', serif;
-justify-content: center;
-display: flex;
-border: 10px;
+    background-color: black;
+    color: #3C3D37;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    font-size: 15px;
+    overflow: hidden;
+    outline: none;
+    font-family: 'Cinzel', serif;
+    justify-content: center;
+    display: flex;
+    border: 10px;
 /* border-color: white; */
 }
+
 .Question_Choices {
-padding: 0 10px;
-max-height: 0;
-overflow: hidden;
-transition: max-height 0.2s ease-out;
-background-color: black;
-outline: none;
-justify-content: center;
+    padding: 0 10px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: black;
+    outline: none;
+    justify-content: center;
 }
+
 .quiz-button{
-font-family: 'Cinzel', serif;
-margin: 20px;
-cursor: pointer;
-position: relative;
-font-size: 20px;
-z-index: 0;
-cursor: pointer;
-padding: 15px 20px;
-border-width: 10px;
-border-radius: 50%;
-background: transparent;
-color: black;
-border-color: transparent;
+    font-family: 'Cinzel', serif;
+    margin: 20px;
+    cursor: pointer;
+    position: relative;
+    font-size: 20px;
+    z-index: 0;
+    cursor: pointer;
+    padding: 15px 20px;
+    border-width: 10px;
+    border-radius: 50%;
+    background: transparent;
+    color: black;
+    border-color: transparent;
 }
+
 .quiz-button:hover{
-color: lightgray;
-opacity: 0.75;
-outline: none;
+    color: lightgray;
+    opacity: 0.75;
+    outline: none;
 }
+
 .quiz-button:focus{
-opacity: 0.75;
-color: lightgray;
-outline: none;
+    opacity: 0.75;
+    color: lightgray;
+    outline: none;
 }
+
 .quiz-button:before {
-position: absolute;
-top: 0;
-left: 0;
-z-index: -1;
-width: 100%;
-height: 100%;
-/*   background-image: linear-gradient(73deg,           transparent 0%, orange 100%); */
-content: '';
-border-radius: 6px;
-transform: skewX(-30deg);
-background-image: linear-gradient(#B8831E,  #C8A935, #B8831E,  #D7CB6E );
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    /*   background-image: linear-gradient(73deg,           transparent 0%, orange 100%); */
+    content: '';
+    border-radius: 6px;
+    transform: skewX(-30deg);
+    background-image: linear-gradient(#B8831E,  #C8A935, #B8831E,  #D7CB6E );
 }
+
 .quiz {
-color: white;
-background-color: black;
-width: 100px;
-height: 50px;
-font-weight: bold;
+    color: white;
+    background-color: black;
+    width: 100px;
+    height: 50px;
+    font-weight: bold;
 }
+
 .quiz p:hover {
-color: black;
-transition: all 1.5s ease;
+    color: black;
+    transition: all 1.5s ease;
 }
+
 .quiz:hover {
-background-color: darkgray;
-transition: all 1.5s ease;
+    background-color: darkgray;
+    transition: all 1.5s ease;
 }
+
 #submit {
     text-align: center;
 }
@@ -256,11 +267,13 @@ transition: all 1.5s ease;
     opacity: 0.75;
     outline: none;
     }
+
 .submit-button:focus{
     opacity: 0.75;
     color: lightgray;
     outline: none;
     }
+
 .submit-button:before {
     position: absolute;
     top: 0;
@@ -281,16 +294,19 @@ transition: all 1.5s ease;
     align-items: center;
     padding: 30px;
     }
+
 .select h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-}   
+}  
+
 .pick {
     text-decoration: underline;
 } 
+
 .name {
-    text-decoration: none;
+   text-decoration: none;
    color: white;
    font-weight: bold;
 }
@@ -299,4 +315,4 @@ transition: all 1.5s ease;
 
 
 
-/* ///////slide/// */
+
