--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -12,10 +12,10 @@ nav ul{
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 125px;
     font-weight: bold;
-    font-family: 'Cinzel', serif;
-    /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
+    font-family: 'Russo One', sans-serif;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
 }
 
 #HS{
@@ -25,15 +25,15 @@ h1 {
 h2,h3 {
     font-size: 30px;
     font-weight: bold;
-    font-family: 'Cinzel', serif;
+    font-family: 'Russo One', sans-serif;
 }
 
 span {
     
     font-size: 40px;
-    font-family: 'Grenze', serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: bold;
-    /* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
 }
 
 header {
@@ -72,12 +72,13 @@ nav ul {
     display: flex;
     flex-flow: row;
     align-items: stretch;   
-    font-family: 'Alegreya SC', serif;
+  font-family: 'Josefin Sans', sans-serif;
     list-style: none;
 }  
 
 nav ul li{
     font-variant: small-caps;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 img{
@@ -106,25 +107,15 @@ img{
     width:150px;
 }
 
-h1 {
-    font-size: 50px;
-    font-weight: bolder;
-    font-family: 'Cinzel', serif;
-    color: white;
-/* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
-}
+
+
 
 h2,h3 {
     font-size: 30px;
     font-weight: bold;
 }
 
-span {
-    font-size: 40px;
-    font-family: 'Grenze', serif;
-    font-weight: bold;
-/* text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15); */
-}
+
 
 header {
     display: flex;
@@ -149,6 +140,9 @@ body {
     width: auto;
     height: 400px;
 }
+.about p{
+    font-family: 'Josefin Sans', sans-serif;
+}
 
 ul li:hover {
     background-color: #222;
@@ -169,7 +163,7 @@ ul li:hover {
     font-size: 15px;
     overflow: hidden;
     outline: none;
-    font-family: 'Cinzel', serif;
+    font-family: 'Josefin Sans', sans-serif;
     justify-content: center;
     display: flex;
     border: 10px;
@@ -187,7 +181,7 @@ ul li:hover {
 }
 
 .quiz-button{
-    font-family: 'Cinzel', serif;
+  font-family: 'Josefin Sans', sans-serif;
     margin: 20px;
     cursor: pointer;
     position: relative;
@@ -234,6 +228,7 @@ ul li:hover {
     width: 100px;
     height: 50px;
     font-weight: bold;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .quiz p:hover {
@@ -252,7 +247,7 @@ ul li:hover {
 
 .submit-button {
     display: inline-block;
-    font-family: 'Cinzel', serif;
+  font-family: 'Josefin Sans', sans-serif;
     margin: 0, auto;
     cursor: pointer;
     position: relative;
