--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -311,6 +311,77 @@ ul li:hover {
    font-weight: bold;
 }
 
+.single-char-container{
+    margin: 0 auto;
+    margin-top: 4em;
+    width: 80%;
+}
+.single-char-container iframe{
+    margin: 0 auto;
+    margin-top: 3em;
+    border-radius: 5px;
+}
+
+.ow_single-char{
+    height: 500px;
+    width: auto;
+    position: absolute;
+    top: 8em;
+    right: 6em;
+}
+.ow_textbox, .ow_abilities{
+    background: rgba(0,0,0,.7);
+    border-radius: 10px;
+    left: 3em;
+    width: 100%;
+}
+
+.ow_abilities .single-ability{
+    width: 50%;
+}
+
+
+
+.lol_single-char{
+    width: 80%;
+    position: absolute;
+    top: 5em;
+    left: 10%;
+    z-index: -1;
+    border-radius: 10px;
+}
+.lore{
+    font-family: 'Josefin-sans', sans-serif;
+    background-color: rgba(0,0,0,.5);
+    padding-left: 2em;
+    border-radius: 5px;
+}
+
+.abilities{
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 10px;
+    margin-top: 2em;
+    margin-bottom: 4em;
+    width: 45%;
+    height: 80%;
+}
+
+.single-ability{
+    display: grid;
+    background-color: rgba(0,0,0,.5);
+    padding-left: 1em;
+    padding-right: 1em;
+    border-radius: 5px;
+}
+
+.single-ability h4{
+    font-family: 'Russo One', sans-serif;
+}
+
+.single-ability p{
+    font-family: 'Josefin-sans', sans-serif;
+}
 
 
 
