styled nav, char quiz styling-WIP, refactoring

--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -60,13 +60,13 @@ body {
 }
 
 nav ul {
-    padding-top:10px;
-    padding-bottom: 15px;
+    padding-top:2px;
+    padding-bottom: 2px;
     font-size: 25px;
     justify-content: space-around;
     /* background-image:(#92dcbe #4c7062);  
     /*background: linear-gradient(to bottom, #222, #a1cfbea1 100%);    */
-     background: #3c6b58;    
+     background: #222;    
     top: 0;
     left: 0;
     width: 100%;
@@ -123,6 +123,13 @@ img{
 
 }
 
+.single-char{
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+
+}
+
 #quiz_body {
     background-color: black;
     border-width: 20px;
@@ -143,42 +150,47 @@ img{
     align-items: center;
     padding-top: 2em;
     
-    }
+}
 
-    #developers{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-    
-    #aboutTheGame{
-        background: #222;
-        width: 800px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border-radius: 16px;
-    }
+#developers{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#aboutTheGame{
+    background: #222;
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 16px;
+}
     
 #devTitle{
     display: flex;
     justify-content: center;
 }
 
-    #devName{
-        margin-top: 3em;
-        width: 600px;
-        background: #222;
-        border-radius: 16px;
+#devName{
+    margin-top: 3em;
+    width: 600px;
+    background: #222;
+    border-radius: 16px;
 
 }
 
 #quizHeader > h1{
-    font-size: 25px;
+    font-size: 40px;
+    
+}
+
+#quizHeader{
+    padding-bottom: 40px;
 }
 
 .Question_Head {
-    background-color: black; 
+    background-color: rgba(0, 0, 0, 0.5); 
     color: lightgrey;
     cursor: pointer;
     padding: 18px;
@@ -191,11 +203,12 @@ img{
     justify-content: center;
     display: flex;
     border: 10px;
-/* border-color: white; */
+    border-radius: 16px;
 }
 
+
 .entireQuestionBox{
-    background-color: black;
+    background-color: transparent;
     border-radius: 16px;
     width: 100%;
     max-height: 300px;
@@ -205,11 +218,12 @@ img{
     padding: 0 10px;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.2s ease-out;
-    background-color: black;  
+    /* transition: max-height 0.2s ease-out; */
+    background-color: rgba(0, 0, 0, 0.5);  
     outline: none;
-    justify-content: center;
-    
+    display: flex;
+    flex-flow: column;  
+    align-items: center;
 }
 
 .quiz-button{
@@ -217,21 +231,23 @@ img{
     margin: 20px;
     cursor: pointer;
     position: relative;
-    font-size: 20px;
+    font-size: 25px;
     z-index: 0;
     cursor: pointer;
-    padding: 15px 20px;
-    border-width: 10px;
-    border-radius: 50%;
-    background: transparent;
-    color: black;
-    border-color: transparent;
+    padding: 15px 25px;
+    width: 700px;
+    
+    /* border-radius: 10%; */
+    background-color: #111;
+    color: lightgrey;
+    border: solid 2px;
 }
 
 .quiz-button:hover{
-    color: lightgray;
-    opacity: 0.75;
+    color: black;
     outline: none;
+    background-color: lightgrey;
+    border-color: lightgrey;
 }
 
 .quiz-button:focus{
@@ -247,11 +263,9 @@ img{
     z-index: -1;
     width: 100%;
     height: 100%;
-    /*   background-image: linear-gradient(73deg,           transparent 0%, orange 100%); */
     content: '';
     border-radius: 6px;
-    transform: skewX(-30deg);
-    background-image: linear-gradient(#B8831E,  #C8A935, #B8831E,  #D7CB6E );
+    background-color: transparent;
 }
 
 .quiz {
@@ -318,15 +332,15 @@ img{
     content: '';
     border-radius: 6px;
     transform: skewX(-30deg);
-    background-image: linear-gradient(#B8831E,  #C8A935, #B8831E,  #D7CB6E );
-    }
+    /* background-image: linear-gradient(#727A7E,  #B8BABD, #A3A3AC,  #D8DDDF ); */
+} 
 
 .games {
     display: flex;    
     flex-direction: column; 
     align-items: center;
     padding: 30px;
-    }
+}
 
 .select h2 {
     display: flex;
