--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -429,6 +429,47 @@ img{
 .single-ability p{
     font-family: 'Josefin-sans', sans-serif;
 }
+#allGames{
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+}
+.gameList{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    
+    background: rgba(0,0,0,.7);
+    border-radius: 10px;
+    padding: 2em;
+
+}
+.gameList img{
+    width: 400px;
+   
+}
+.allGames{
+    display: flex;    
+    flex-direction: row; 
+    justify-items: center;
+    padding: 30px;
+}
+.allGames .gameList{
+    
+    display: flex;
+    height: 100%;
+    border: solid rgba(0,0,0,0);
+    padding-left: 3em;
+    padding-right: 3em;
+}
+    
+.allGames .gameList:hover{
+    cursor: pointer;
+    border: solid #fff;
+    border-radius: 10px;
+    background: rgba(0,0,0,.5);
+}
+    
 
 
 
