--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -434,11 +434,11 @@ img{
     display: flex;
     justify-content: center;
 }
-.gameList{
+.allGames{
     display: flex;
     width: 100%;
     justify-content: space-around;
-    
+    align-items: center;
     background: rgba(0,0,0,.7);
     border-radius: 10px;
     padding: 2em;
@@ -446,12 +446,13 @@ img{
 }
 .gameList img{
     width: 400px;
+    align-self: center;
    
 }
-.allGames{
+.lotsGames{
     display: flex;    
-    flex-direction: row; 
-    justify-items: center;
+    flex-direction: column; 
+    align-items: center;
     padding: 30px;
 }
 .allGames .gameList{
