--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -52,6 +52,7 @@ body {
     background-size: 100%;
     color: #fff;
     padding: 2em;
+    overflow-x: hidden;
 }
 
 #about, #quiz {
@@ -510,6 +511,75 @@ img{
 .allChar, .switch-game{
     align-items: center;
     width: 50%;
+}
+
+.slideStuff{
+    /* overflow: hidden; */
+}
+.item1{
+	position: absolute;
+    display: block;
+    /* padding-left: 50px; */
+	top: 1em;  
+    width: 80%;  
+    padding-left: 40px;
+    font-size: 100px;
+	animation-duration: 12s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+}
+.item2{
+	position: absolute;
+    display: block;
+    text-align: left;
+    right: 100px; 
+    top: 3em;  
+    width: 100%;  
+    font-size: 4em;
+	animation-duration: 12s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+}
+.item3{
+    position: absolute;
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    width: 350px;   
+	top: 3em;  
+    animation-duration: 12s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+}
+
+.item1{
+	animation-name: anim-1;
+}
+
+.item2{
+	animation-name: anim-2;
+}
+.item3{
+	animation-name: anim-3;
+}
+
+
+@keyframes anim-1 {
+	0%, 8.3% { left: -100%; opacity: 0; }
+  8.3%,25% { left: 25%; opacity: 1; }
+  33.33%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-2 {
+	0%, 33.33% { left: -100%; opacity: 0; }
+  41.63%, 58.29% { left: 18%; opacity: 1; }
+  66.66%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-3 {
+	0%, 26% { left: -100%; opacity: 0; }
+  74.96%, 91.62% { left: 35%; opacity: 1; }
+  100% { left: 110%; opacity: 0; }
 }
 
 
