--- a/Parcel-frontend/style.css
+++ b/Parcel-frontend/style.css
@@ -632,19 +632,39 @@ img{
       width: auto;
       padding-bottom: 30px;
   }
-  .imageAndName{
-      display: flex;
-      flex-direction: row;
-      justify-items: center;
+  .char-all{
+    
+    display: flex;
+    flex-wrap: wrap;
+    height: 150px;
+    justify-content: center;
+}
       
-  }
+
   .single-char{
-      width: 100px;
+      width: 150px;
   }
   .imageAndName{
       display: flex;
       flex-direction: column;
       align-items: center;
+      font-family: 'Josefin Sans', sans-serif;
+      padding-top: 40px;
+      padding-left: 20px;
+      padding-right:20px;
+      
+    }
+  .char-all-box{
+
+      display: flex;   
+        flex-direction: row;
+        flex-wrap: wrap;
   }
+  .allChar{
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+  }
+
 
 
